# Chem224

./: .gitignore  .pylintrc  404.html  README.md  REQUIREMENTS.txt  index.html  mkdocs.yml  pyproject.toml
.chem224/: pyvenv.cfg
.chem224/Scripts/: activate  activate.bat  jsonpointer
chem224/: __init__.py  generate_equations_webpage.py  generate_pdfs.py  generate_webpage.py  manage_resources.py  pdfgen2.py  utils.py
docs/: equations.md  index.md
docs/lectures/: L01.ipynb
docs/lessons/: L01.ipynb  L11.ipynb  L22.ipynb  template_lecture.ipynb
docs/resources/: equations.json
equations/: index.html
lessons/: G12.md  PS2.md
lessons/L01/: index.html
lessons/L11/: index.html
lessons/Wk0/: L01.html  L01.ipynb  L01_1.ipynb  Nickel_L_edge_XAS_Analysis.ipynb  Nickel_L_edge_XAS_Analysis_Final.ipynb  Nickel_L_edge_XAS_Analysis_Final_with_Reference.ipynb  SpectralTheory (1).ipynb  SpectralTheory.ipynb  finalL01.ipynb
lessons/Wk1/: L11.ipynb  L11_00.ipynb  L11_1.ipynb  L12.ipynb  L12_00.ipynb  L12_1.ipynb  LCtables.ipynb
lessons/Wk2/: L21.ipynb  L22 copy.ipynb  automorphisms.ipynb
lessons/Wk3/: L32.ipynb
lessons/Wk5/: Wk5_2.ipynb
lessons/Wk6/: L6.md
lessons/Wk7/: L71.md  L72.html  L72.md  L72_ans.md  PS2.html  PS2.md
lessons/template/: template_lecture.html  template_lecture.ipynb
lessons/template_lecture/: index.html
resources/: equations.json  syllabus.json
scripts/: generate_lessons.py  generate_pdfs.py  manage_resources.py  utils.py
search/: search_index.json
